# diarize

./: .dockerignore  .gitignore  Dockerfile  README.md  diarize.py  diarize_standalone.py  main.py  pyproject.linux.toml  pyproject.toml  recording-1784121028538.webm  user_data.yaml
