[project]
name = "diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "pyannote-audio>=3.1,<3.3",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "huggingface-hub<0.24",
    "speechbrain<1.0",
    "numpy<2.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
