[project]
name = "diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "pyannote-audio>=4.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "torch>=2.11",
    "pip-system-certs>=5.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
